# CareerBench

./: .gitignore  BUNDLE_MODEL.md  CONTRIBUTING.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  pr-checks.yml
docs/: README.md  SECURITY.md  TODO.md  documentation-reorganization.md  documentation-standards.md
docs/development/: algorithms-and-data-flows.md  ci-cd.md  setup.md  testing.md
docs/development/adr/: 0001-use-tauri-for-desktop-app.md  0002-pluggable-ai-provider-architecture.md  0003-multi-level-ai-caching.md  0004-hybrid-mode-routing.md  README.md
docs/guides/: local-ai-troubleshooting-detailed.md  local-ai-troubleshooting.md  model-setup.md  troubleshooting.md
docs/specs/: ai-provider.md  overview.md
docs/specs/ai-provider/: IMPLEMENTATION_STATUS.md  LOCAL_MODEL_COMPLETE.md  LOCAL_MODEL_STATUS.md  implementation-notes.md  integration-complete.md  local-model-complete.md  local-model-implementation.md  model-recommendation.md
docs/specs/features/: application-pipeline.md  job-intake.md  local-ai-caching.md  simple-dashboard-visualization.md
docs/specs/testing/: IMPLEMENTATION_SUMMARY.md  implementation-summary.md  testing-guide.md  testing.md
scripts/: README.md  populate_test_data.rs  populate_test_data.sh
specs/design/: ui-design.md
specs/features/: job-parsing.md  resume-coverletter.md  user-profile.md
src/: App.tsx  index.css  main.tsx  shared.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/resources/models/: .gitkeep  README.md
src-tauri/src/: ai_cache.rs  ai_client.rs  analytics.rs  calendar.rs  commands.rs  companies.rs  data_deletion.rs  data_export.rs  db.rs  email.rs  encryption.rs  error_logging.rs  errors.rs  job_scraper.rs  learning.rs  lib.rs  local_storage.rs  logging.rs  main.rs  portfolio_export.rs  profile_import.rs  recruiter_crm.rs  reminders.rs  resume_generator.rs  secure_storage.rs
src-tauri/src/ai/: cloud_provider.rs  error_messages.rs  errors.rs  hybrid_provider.rs  key_rotation.rs  llama_wrapper.rs  local_provider.rs  mock_provider.rs  mod.rs  provider.rs  rate_limiter.rs  resolver.rs  retry.rs  settings.rs  types.rs  validation.rs
src-tauri/tests/: integration_tests.rs
src/ai/: types.ts
src/commands/: ai.ts  applications.ts  cache.ts  calendar.ts  dashboard.ts  index.ts  jobs.ts  profile.ts  types.ts  types.ts.backup
src/components/: ErrorBoundary.tsx  InlineEditable.css  InlineEditable.tsx  JobCard.css  JobCard.tsx  Layout.css  Layout.tsx  LoadingSkeleton.css  LoadingSkeleton.tsx  ProgressIndicator.css  ProgressIndicator.tsx  QuickSwitcher.css  QuickSwitcher.tsx  Toast.css  Toast.tsx
src/hooks/: useApplications.ts  useDashboardData.ts  useJobs.ts
src/pages/: Applications.css  Applications.tsx  Calendar.css  Calendar.tsx  Companies.css  Companies.tsx  Dashboard.css  Dashboard.tsx  Jobs.css  Jobs.tsx  Learning.css  Learning.tsx  Profile.css  Profile.tsx  Recruiters.css  Recruiters.tsx  Settings.css  Settings.tsx
src/services/: dashboardService.ts  index.ts  jobService.ts
src/test/: applicationUtils.test.ts  behavior.test.tsx  hooks.test.tsx  pages.test.tsx  utils.test.ts
src/utils/: applicationUtils.ts  errorUtils.ts
src/validation/: schemas.ts  utils.ts
(+4 files in other folders)
